# 3D-Game-dev

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh
Assignment_1/: CMakeLists.txt  README.md  main.cpp  transform.fs  transform.vs
Assignment_1/learnopengl/: shader_s.h
Assignment_2/: README.md
Assignment_3/: CMakeLists.txt  README.md  main.cpp  model.cpp  model.h
Assignment_3/resources/fs/: basic.fs
Assignment_4/: CMakeLists.txt  README.md  main.cpp
Assignment_4/learnopengl/: root_directory.h
Assignment_4/resources/objects/mixamo/: Ch14_nonPBR.dae  Rumba Dancing.dae
configuration/: root_directory.h.in
includes/learnopengl/: root_directory.h  shader_s.h
